required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Version 6.0.1 (SVN branch-6-0):
---------------------------

- Fix for the cluster processing if the shape bounds doesn't overlap 
  with the given extent (#3913)

- OGC Filter: fix segfault when a ows_varname_type or wfs_varname_type is
  defined but not a gml_varname_type (#3902)

- Fix regression of MapServer 6.0.0 when specifying a time range in WMS time
  requests on a Postgis layer (#3909)

- Fixed order of metadata lookup for WMS GML GetFeatureInfo. 'ows' should 
  come last, not first (#3636).

- Fixed mssql2008 to return correct geometries with chart layer type (#3894)

- Write SYMBOLSET/END tags when saving a symbol file (#3885)

- Make java threadtests work again (#3887) 

- Fix segfault on malformed <PropertyIsLike> filters (#3888)

- Fixed the query handling problem with the Oracle spatial driver (#3878)

- Fixed potential crash with AVERAGE resampling and crazy reprojection (#3886)

- Fix for the warnings in mapunion.c (#3880)

- Fixed the build problem in mapunion.c (#3877)

- Union layer: Fixed the crash when styling source layers using attributes (#3870)

- Improve rangeset item checking so that Bands=1,2,3 is supported with WCS 1.0
  (#3919).

- Fix GetMapserverUnitUsingProj() for proj=latlong (#3883)


Version 6.0.0 (2011-05-11)
--------------------------

- apply fix for #3834 on legend icon rendering (#3866)

- Union layer: Fixed a potential seg fault in msUnionLayerNextShape (#3859)

- Cluster layer: Fixed the problem when returning undefined attribute (#3700)

- Union layer: Fix for the item initialization at the source layer (#3859)

- Union layer: Fixed the potential seg fault when STYLEITEM AUTO is used (#3859)
